# KATANA

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: search.yaml
scripts/: run_search.py
src/katana/: __init__.py
src/katana/agent/: __init__.py  parser.py  policy.py  prompts.py
src/katana/rewards/: __init__.py  curriculum.py  system.py
src/katana/sandbox/: __init__.py  executor.py  security.py
src/katana/training/: __init__.py  callbacks.py  grpo.py  reward_fn.py
src/katana/utils/: __init__.py  logging.py
